<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F0B2A">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/widget_size"
        android:layout_height="@dimen/widget_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/placeholder"
        android:src="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/display_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/display_name"
        android:textSize="24sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/about_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/profile_about"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_below="@+id/display_name_txt"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/change_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/change_about"
        android:layout_alignBottom="@+id/change_about"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@android:color/white"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:text="@string/change_image"
        android:textColor="#3F0B2A" />

    <Button
        android:id="@+id/change_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@+id/change_img"
        android:layout_toStartOf="@+id/change_img"
        android:background="@color/colorAccent"
        android:paddingEnd="18dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingStart="18dp"
        android:text="@string/change_info"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
</RelativeLayout>
